# motoCompare

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_catalog_schema.py  0002_research_tasks.py  0003_profile_tables.py
backend/app/: config.py  db.py  main.py
backend/app/catalog/: models.py  registry.py  router.py  schemas.py  seed.py  service.py  units.py
backend/app/chat/: agent.py  prompts.py  router.py  schemas.py  service.py  tools.py
backend/app/profile/: models.py  router.py  schemas.py  service.py
backend/app/research/: executor.py  models.py  provider.py  router.py  runner.py  schemas.py  service.py  tiering.py
backend/tests/: conftest.py  test_api.py  test_chat_api.py  test_chat_stream.py  test_chat_tools.py  test_coverage.py  test_profile_api.py  test_profile_service.py  test_research_api.py  test_research_provider.py  test_research_runner.py  test_research_service.py  test_resolve.py  test_seed.py  test_tier_resolution.py  test_tiering.py  test_units.py
docs/: DECISIONS.md  SCOPE.md  SHARED.md
docs/modules/: catalog.md  chat.md  profile.md  research.md  web.md
